fixed stock history.